Better bundle structure applied

--- a/src/BullportBundle/Resources/views/Home/index.html.twig
+++ b/src/BullportBundle/Resources/views/Home/index.html.twig
@@ -1,4 +1,4 @@
-{% extends "base.html.twig" %}
+{% extends "::base.html.twig" %}
 
 {% block title %}Bullport Code Samples{% endblock %}
 
@@ -13,5 +13,6 @@
     </p>
     <ul class="bullport_index_list">
         <li><a href="/bullport/hash" target="_self">Hash calculator</a> (Strategy design pattern)</li>
+        <li><a href="/bullport/pizza" target="_self">Pizza ordering</a> (Decorator and Observer design patterns)</li>
     </ul>
 {% endblock %}
