--- a/src/BullportBundle/Resources/views/Home/index.html.twig
+++ b/src/BullportBundle/Resources/views/Home/index.html.twig
@@ -14,5 +14,6 @@
     <ul class="bullport_index_list">
         <li><a href="/bullport/hash" target="_self">Hash calculator</a> (Strategy design pattern)</li>
         <li><a href="/bullport/pizza" target="_self">Pizza ordering</a> (Decorator and Observer design patterns)</li>
+        <li><a href="/bullport/animal" target="_self">Animal Hotel</a> (Abstract Factory design pattern)</li>
     </ul>
 {% endblock %}
