--- a/src/BullportBundle/Resources/views/Pizza/index.html.twig
+++ b/src/BullportBundle/Resources/views/Pizza/index.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Pizza compositor and ordering service{% endblock %}
 
 {% block stylesheets %}
+    <link href="{{ asset('bundles/bullport/css/global.css') }}" type="text/css" rel="stylesheet" />
     <link href="{{ asset('bundles/bullport/css/pizza.css') }}" type="text/css" rel="stylesheet" />
 {% endblock %}
 
