--- a/src/BullportBundle/Resources/views/Hash/index.html.twig
+++ b/src/BullportBundle/Resources/views/Hash/index.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Hash Calculation{% endblock %}
 
 {% block stylesheets %}
+    <link href="{{ asset('bundles/bullport/css/global.css') }}" type="text/css" rel="stylesheet" />
     <link href="{{ asset('bundles/bullport/css/hash.css') }}" type="text/css" rel="stylesheet" />
 {% endblock %}
 
